--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,5 +1,6 @@
 {% load static %}
-  
+<script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
+
 <script type="text/javascript" src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
