--- a/templates/checkout.htm
+++ b/templates/checkout.htm
@@ -1,80 +1,65 @@
+{%extends 'base_layout.htm'%}
+{%load static%}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block title %}
+   Checkout &mdash; Studyhelp
+{% endblock %}
 
-<head>
-    <!-- Add meta tags for mobile and IE -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title> PayPal Checkout Integration | Server Demo </title>
-</head>
+{%block content%}
+    <section id="banner">
+        <div class="inner">
+            <div class="logo"><span class="icon fa-gem"></span></div>
+            <h2>Checkout</h2>
+            <p>complete payment first for you to download your order</p>
+        </div>
+    </section>
+{%endblock%}
 
-<body>
-    <!-- Set up a container element for the button -->
-    <div id="paypal-button-container"></div>
-
-    <!-- Include the PayPal JavaScript SDK -->
-    <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
-
-    <script>
-        // Render the PayPal button into #paypal-button-container
-        paypal.Buttons({
-
-            // Call your server to set up the transaction
-            createOrder: function(data, actions) {
-                return fetch('/demo/checkout/api/paypal/order/create/', {
-                    method: 'post'
-                }).then(function(res) {
-                    return res.json();
-                }).then(function(orderData) {
-                    return orderData.id;
-                });
-            },
-
-            // Call your server to finalize the transaction
-            onApprove: function(data, actions) {
-                return fetch('/demo/checkout/api/paypal/order/' + data.orderID + '/capture/', {
-                    method: 'post'
-                }).then(function(res) {
-                    return res.json();
-                }).then(function(orderData) {
-                    // Three cases to handle:
-                    //   (1) Recoverable INSTRUMENT_DECLINED -> call actions.restart()
-                    //   (2) Other non-recoverable errors -> Show a failure message
-                    //   (3) Successful transaction -> Show confirmation or thank you
-
-                    // This example reads a v2/checkout/orders capture response, propagated from the server
-                    // You could use a different API or structure for your 'orderData'
-                    var errorDetail = Array.isArray(orderData.details) && orderData.details[0];
-
-                    if (errorDetail && errorDetail.issue === 'INSTRUMENT_DECLINED') {
-                        return actions.restart(); // Recoverable state, per:
-                        // https://developer.paypal.com/docs/checkout/integration-features/funding-failure/
-                    }
-
-                    if (errorDetail) {
-                        var msg = 'Sorry, your transaction could not be processed.';
-                        if (errorDetail.description) msg += '\n\n' + errorDetail.description;
-                        if (orderData.debug_id) msg += ' (' + orderData.debug_id + ')';
-                        return alert(msg); // Show a failure message (try to avoid alerts in production environments)
-                    }
-
-                    // Successful capture! For demo purposes:
-                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
-                    var transaction = orderData.purchase_units[0].payments.captures[0];
-                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
-
-                    // Replace the above to show a success message within this page, e.g.
-                    // const element = document.getElementById('paypal-button-container');
-                    // element.innerHTML = '';
-                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
-                    // Or go to another URL:  actions.redirect('thank_you.html');
-                });
-            }
-
-        }).render('#paypal-button-container');
-    </script>
-</body>
-
-</html>
-    
+{%block footer%}
+<section id="footer">
+    <div class="inner">
+        <h2 class="major">Checkout Form</h2>
+        <p>Enter your shipping address</p>
+        <form method="post" action="/checkout/{{order.reference_code}}/">
+            <div class="row gtr-uniform">
+                {%csrf_token%}
+                <div class="col-6 col-12-xsmall">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" value={{user.username}} />
+                </div>
+                <div class="col-6 col-12-xsmall">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" value={{user.email}} />
+                </div>
+                <div class="col-6 col-12-xsmall">
+                    <label for="postal_code">Postal Code</label>
+                    <input type="text" name="Postal_code" id="Postal_code"/>
+                </div>
+                <div class="col-6 col-12-xsmall">
+                    <label for="address">Address</label>
+                    <input type="text" name="address" id="address"/>
+                </div>
+                <div class="col-12">
+                    <label for="subject">Zip</label>
+                    <input type="text" name="zip" id="zip"/>
+                </div>
+                <div class="col-12">
+                    <ul class="actions">
+                        <li><input type="submit" value="Submit" class="primary" /></li>
+                    </ul>
+                </div>
+            </div>
+        </form>
+        <ul class="copyright">
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li> 
+            <li><a href="/how_we_work/">How we work</a></li> 
+            <li><a href="/revision_policy/">Revision policy</a></li>
+            <li><a href="/refund_policy/">Refund policy</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/create_order/">Order</a></li>
+            <li><a href="/samples/">Samples</a></li>
+            <li>Design: <a href="#">Web Space</a></li>
+        </ul>
+    </div>
+</section>
+{%endblock%}
