Completed checkout model

--- a/templates/order_description.htm
+++ b/templates/order_description.htm
@@ -101,7 +101,7 @@
                     <li><a href="{{order.assignment_file.url}}" class="button primary fit">Download Assignment</a></li>
                     {% else %}
                     <li><a href="/dashboard/" class="button fit">Back</a></li>
-                    <li><a href="/checkout/{{order.reference_code}}/" class="button primary fit">Download Assignment</a></li>
+                    <li><a href="/payments/checkout/{{order.reference_code}}/" class="button primary fit">Download Assignment</a></li>
                     {% endif %}
                {% else %}
                     <li><a href="/dashboard/" class="button fit">Back</a></li>
