--- a/payments/templates/payments/payment.htm
+++ b/payments/templates/payments/payment.htm
@@ -9,12 +9,68 @@
 
 
 {%block content%}
-    <h4>Pay with PayPal</h4>
-    {{ form.render }}
+
+
 {%endblock%}
 
 
 {%block footer%}
-
+<section id="footer">
+    <div class="inner">
+        <h2 class="major">Order {{order.reference_code}}</h2>
+        <div class="table-wrapper">
+            <table class="alt">
+                <thead>
+                    <tr>
+                        <th>Academic Level</th>
+                        <th>Subject</th>
+                        <th>Type</th>
+                        <th>Paper format</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{order.get_academic_level_display}}</td>
+                        <td>{{order.get_subject_display}}</td>
+                        <td>{{order.get_type_display}}</td>
+                        <td>{{order.get_paper_format_display}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="table-wrapper">
+            <table class="alt">
+                <thead>
+                    <tr>
+                        <th>Number of Pages</th>
+                        <th>Days</th>
+                        <th>Line spacing</th>
+                        <th>Total cost</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{order.get_number_of_pages_display}}</td>
+                        <td>{{order.get_days_display}}</td>
+                        <td>{{order.get_line_spacing_display}}</td>
+                        <td>{{order.price}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <h4>Pay with PayPal</h4>
+        {{ form.render }}
+        <ul class="copyright">
+            <li>&copy;<script>document.write(new Date().getFullYear())</script> Study Help. All rights reserved.</li>
+            <li><a href="/how_we_work/">How we work</a></li> 
+            <li><a href="/revision_policy/">Revision policy</a></li>
+            <li><a href="/refund_policy/">Refund policy</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/create_order/">Order</a></li>
+            <li><a href="/samples/">Samples</a></li>
+            <li>Design: <a href="#">Web Space</a></li>
+        </ul>
+    </div>
+</section>
 {%endblock%}
 
