--- a/payments/templates/payments/checkout.htm
+++ b/payments/templates/payments/checkout.htm
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-12">
                     <label for="billing_address">Address</label>
-                    <input type="text" id="billing_address" name="billing_address" placeholder="1234 Main St">
+                    <input type="text" id="billing_address" name="billing_address" placeholder="Street Address">
                 </div>
                 <div class="col-12">
                     <label for="billing_address2">Address 2 (Optional)</label>
