fixed the dashboard views

--- a/templates/dashboard.htm
+++ b/templates/dashboard.htm
@@ -57,7 +57,7 @@
                                     <td>{{order.date_created}}</td>
                                     <td>{{order.reference_code}}</td>
                                     <td>{{order.get_subject_display}}</td>
-                                    <td><a href="/order_description/{{order.reference_code}}/" class="special"></a></td>
+                                    <td><a href="/order_description/{{order.reference_code}}/" class="special">View</a></td>
                                 </tr>
                                 {% endfor %}
                                 {% endif %}
@@ -94,7 +94,7 @@
                                     <td>{{order.date_created}}</td>
                                     <td>{{order.reference_code}}</td>
                                     <td>{{order.get_subject_display}}</td>
-                                    <td><a href="/order_description/{{order.reference_code}}/" class="special"></a></td>
+                                    <td><a href="/order_description/{{order.reference_code}}/" class="special">View</a></td>
                                 </tr>
                                 {% endfor %}
                                 {% endif %}
